# TemplateCMake

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  codecov.yml
inc/: CMakeLists.txt  header.h  math.h
lib/: CMakeLists.txt  math.cpp
src/: CMakeLists.txt  header.cpp  main.cpp
test/: CMakeLists.txt  test_add.cpp
